--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dateformat": "^3.0.3",
+    "moment-range": "^4.0.2",
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
+    "react-input-calendar": "^0.5.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
+    "react-widgets": "^4.4.11"
   },
   "scripts": {
     "start": "react-scripts start",
